force-app/main/default/objects/SCC_Berita_Acara_Opname__c/SCC_Berita_Acara_Opname__c.object-meta.xml
<CustomObject>
    <label>Berita Acara Opname</label>
    <nameField>
        <displayFormat>{0000000000}</displayFormat>
        <label>No</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Berita Acara Opname</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>