force-app/main/default/objects/SCC_Berita_Acara_Opname__c/fields/SCC_Branch__c.field-meta.xml
<CustomField>
    <fullName>SCC_Branch__c</fullName>
    <label>Branch</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>