force-app/main/default/objects/SCC_Berita_Acara_Opname__c/fields/SCC_Jenis_Terminal__c.field-meta.xml
<CustomField>
    <fullName>SCC_Jenis_Terminal__c</fullName>
    <label>Jenis Terminal</label>
    <length>255</length>
    <type>Text</type>
</CustomField>