force-app/main/default/objects/SCC_Berita_Acara_Opname__c/fields/SCC_Kurang_Kas__c.field-meta.xml
<CustomField>
    <fullName>SCC_Kurang_Kas__c</fullName>
    <label>Kurang Kas</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>