force-app/main/default/objects/SCC_Berita_Acara_Opname__c/fields/SCC_Lebih_Fisik__c.field-meta.xml
<CustomField>
    <fullName>SCC_Lebih_Fisik__c</fullName>
    <label>Lebih Fisik</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>