force-app/main/default/objects/SCC_Berita_Acara_Opname__c/fields/SCC_Status_Id__c.field-meta.xml
<CustomField>
    <fullName>SCC_Status_Id__c</fullName>
    <label>Status Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>