force-app/main/default/objects/SCC_Berita_Acara_Opname__c/fields/SCC_Status_Name__c.field-meta.xml
<CustomField>
    <fullName>SCC_Status_Name__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Status Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>