force-app/main/default/objects/SCC_Berita_Acara_Opname__c/fields/SCC_Terminal_ID__c.field-meta.xml
<CustomField>
    <fullName>SCC_Terminal_ID__c</fullName>
    <label>Terminal ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>