force-app/main/default/objects/SCC_Berita_Acara_Opname__c/fields/SCC_Waktu_Opname__c.field-meta.xml
<CustomField>
    <fullName>SCC_Waktu_Opname__c</fullName>
    <label>Waktu Opname</label>
    <length>255</length>
    <type>Text</type>
</CustomField>